# liblog

./: .gitignore  Makefile.am  README.rst  configure.ac
doc/: .gitignore  BUILD.rst  DeveloperGuide.rst  Makefile.am  conf.py.in  install_guide.rst  process.rst
lib/: .gitignore  Makefile.am  log.c  spin.h
lib/cobaro-log0/: log.h
lib/libcobaro-log0/: Makefile.am  log.h
m4/: Makefile.am  acx_pthread.m4
script/: build.sh
test/: .gitignore  Makefile.am  messages.c  messages.h  test-log.c
