# COPYRIGHT_BEGIN
# Copyright (C) 2015, cobaro.org
# All rights reserved.
# COPYRIGHT_END

SUBDIRS = libcobaro-log0

lib_LTLIBRARIES = libcobaro-log0.la

libcobaro_log0_ladir = $(includedir)/libcobaro-log0

libcobaro_log0_la_SOURCES = \
	log.c

libcobaro_log0_la_LDFLAGS = \
	-version-info @LIB_VERSION@

AM_CPPFLAGS = \
	@CPPFLAGS@

